manifests/networking/gateway-api/security/auth-service-policy.yml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-service-policy
  namespace: ecom
spec:
  selector:
    matchLabels:
      app: auth-service

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/ecom/sa/default
